{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 72,
  "lineage": "ded9436a-ce81-6997-1b49-01e8e5cedf27",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:487617409448:internet-gateway/igw-033c520615f7e5947",
            "id": "igw-033c520615f7e5947",
            "owner_id": "487617409448",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "test-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "test-igw"
            },
            "vpc_id": "vpc-0848668b176c8eaad"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:487617409448:loadbalancer/app/load-balancer/8088bd16dc22a6a9",
            "arn_suffix": "app/load-balancer/8088bd16dc22a6a9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "load-balancer-1524605984.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:487617409448:loadbalancer/app/load-balancer/8088bd16dc22a6a9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "load-balancer",
            "security_groups": [
              "sg-02bb22b0337752863"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b512c1e8a92e01b"
              },
              {
                "subnet_id": "subnet-06d08197844d7d54d"
              }
            ],
            "subnets": [
              "subnet-01b512c1e8a92e01b",
              "subnet-06d08197844d7d54d"
            ],
            "tags": {
              "Name": "Load Balancer"
            },
            "tags_all": {
              "Name": "Load Balancer"
            },
            "vpc_id": "vpc-0848668b176c8eaad",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.pub_subnet_1",
            "aws_subnet.pub_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:487617409448:listener/app/load-balancer/8088bd16dc22a6a9/bed2ecd98d7c6412",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Fixed response content",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:487617409448:listener/app/load-balancer/8088bd16dc22a6a9/bed2ecd98d7c6412",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:487617409448:loadbalancer/app/load-balancer/8088bd16dc22a6a9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load-balancer",
            "aws_security_group.alb_sg",
            "aws_subnet.pub_subnet_1",
            "aws_subnet.pub_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:487617409448:targetgroup/target-group/f6e37c85ac594cf6",
            "arn_suffix": "targetgroup/target-group/f6e37c85ac594cf6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:487617409448:targetgroup/target-group/f6e37c85ac594cf6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0848668b176c8eaad"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-033c520615f7e5947",
            "id": "r-rtb-04140307ea7196e4f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04140307ea7196e4f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.rt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:487617409448:route-table/rtb-04140307ea7196e4f",
            "id": "rtb-04140307ea7196e4f",
            "owner_id": "487617409448",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "route-table"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0848668b176c8eaad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe52d4f003e1311b",
            "route_table_id": "rtb-04140307ea7196e4f",
            "subnet_id": "subnet-06d08197844d7d54d"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.pub_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2298932863560d2",
            "route_table_id": "rtb-04140307ea7196e4f",
            "subnet_id": "subnet-01b512c1e8a92e01b"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.pub_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:487617409448:security-group/sg-02bb22b0337752863",
            "description": "Allow incoming HTTP traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bb22b0337752863",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB Security Group",
            "name_prefix": "",
            "owner_id": "487617409448",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0848668b176c8eaad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:487617409448:security-group/sg-083980f947b3413e6",
            "description": "Allow HTTP traffic from ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083980f947b3413e6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bb22b0337752863"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web Server Security Group",
            "name_prefix": "",
            "owner_id": "487617409448",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0848668b176c8eaad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:487617409448:subnet/subnet-06d08197844d7d54d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06d08197844d7d54d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "487617409448",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0848668b176c8eaad"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:487617409448:subnet/subnet-01b512c1e8a92e01b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01b512c1e8a92e01b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "487617409448",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0848668b176c8eaad"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:487617409448:subnet/subnet-06d1c2c9ee95410f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06d1c2c9ee95410f1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "487617409448",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0848668b176c8eaad"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:487617409448:vpc/vpc-0848668b176c8eaad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c74d089c67ac23cd",
            "default_route_table_id": "rtb-0d20ea394452225e1",
            "default_security_group_id": "sg-0b4c83b2396e64f26",
            "dhcp_options_id": "dopt-541a2932",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0848668b176c8eaad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d20ea394452225e1",
            "owner_id": "487617409448",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "test-vpc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}